--- a/app/src/main/res/layout/guide1.xml
+++ b/app/src/main/res/layout/guide1.xml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
-    xmlns:app = "http://schemas.android.com/apk/res-auto"
-    android:layout_width = "wrap_content"
-    android:layout_height = "100dp"
-    android:gravity = "center_horizontal"
-    android:orientation = "vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="100dp"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        app:cardCornerRadius = "15dp"
-        app:cardElevation = "0dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="0dp">
 
         <LinearLayout
-            android:layout_width = "wrap_content"
-            android:layout_height = "wrap_content"
-            android:background = "@color/colorAccent"
-            android:gravity = "center_horizontal"
-            android:orientation = "vertical">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/theme"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
             <TextView
-                android:id = "@+id/title"
-                android:layout_width = "wrap_content"
-                android:layout_height = "wrap_content"
-                android:padding= "@dimen/item_smalltext_size"
-                android:text = "@string/guide1"
-                android:textColor = "@color/colorPrimary"
-                android:textSize = "@dimen/item_text_size" />
-
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/item_smalltext_size"
+                android:text="@string/guide1"
+                android:textColor="@color/white_text"
+                android:textSize="@dimen/item_text_size" />
 
         </LinearLayout>
 
