--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FAFAFA</color>
-    <color name="colorPrimaryDark">#FAFAFA</color>
-    <color name="colorAccent">#2296eb</color>
-    <color name="colorItemText">#0d131c</color>
-    <color name="line">#f0f0f0</color>
-    <color name="grayText">#C0C0C0</color>
-    <color name="alpha">#00000000</color>
-    <color name="test">#434343</color>
+    <!--  widget  -->
+    <color name="widget_main_text">#0d131c</color>
+    <color name="alpha">#00FFFFFF</color>
+
+    <!--  default  -->
+    <color name="theme">#2296eb</color>
+    <color name="background">#FAFAFA</color>
+    <color name="main_text">#0d131c</color>
+    <color name="secondary_text">#7C7C7C</color>
+    <color name="white_text">#FFFFFF</color>
+    <color name="placeholder_text">#D3D1D1</color>
+    <color name="hr">#f0f0f0</color>
+
 </resources>
