--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,7 +7,7 @@
     <dimen name="widget_text_size">24sp</dimen>
     <dimen name="margin_small">10dp</dimen>
     <dimen name="padding_small">18dp</dimen>
-    <dimen name="lineHeight">3dp</dimen>
+    <dimen name="lineHeight">1dp</dimen>
 
     <!--
 Refer to App Widget Documentation for margin information
@@ -15,4 +15,5 @@ http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
     <dimen name="widget_margin">8dp</dimen>
     <dimen name="cardRadius">8dp</dimen>
+    <dimen name="seekbar_height">15dp</dimen>
 </resources>
