--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,15 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
-    <style name="radioStyle">
-        <item name="android:button">@null</item>
-        <item name="android:textSize">@dimen/item_text_size</item>
-        <item name="android:textColor">@drawable/radio_text_click</item>
+        <item name="colorPrimary">@color/main_text</item>
+        <item name="colorPrimaryDark">@color/main_text</item>
+        <item name="colorAccent">@color/theme</item>
     </style>
 
 
